#142 Add FilterType to subscribe method